adds graphs and rewords part of the text

--- a/report/references.bib
+++ b/report/references.bib
@@ -238,3 +238,17 @@
   month        = {Mar},
   journal      = {OpenAI}
 }
+
+@inproceedings{Miller_1968,
+  address   = {San Francisco, California},
+  title     = {Response time in man-computer conversational transactions},
+  url       = {http://portal.acm.org/citation.cfm?doid=1476589.1476628},
+  doi       = {10.1145/1476589.1476628},
+  booktitle = {Proceedings of the December 9-11, 1968, fall joint computer conference, part I on - AFIPS 1968 (Fall, part I)},
+  publisher = {ACM Press},
+  author    = {Miller, Robert B.},
+  year      = {1968},
+  pages     = {267},
+  language  = {en}
+}
+
